--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 	
 	<html>
-		<!-- please use CSS style tags here -->
+		<!-- please use CSS style tags here --> 
 	<body>
 	
 	<h1> this is my header </h1>
 	
-	<p> This is paragraph One </p>
+	<p> This is paragraph Ones </p>
 	
 	<h2> This is my second header </h2>
 	
