Added STYLE tag per review comments

--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 	
 	<html>
-		<!-- please use CSS style tags here --> 
+	<!--	style tags and written -->
+	
+		<head>
+			<style>
+				h1 {color:blue; font-size: 300%}
+				p {color:blue}
+			</style>
+	</head>
+	
 	<body>
 	
 	<h1> this is my header </h1>
