--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 	
 	<p> This is paragraph Ones </p>
 	
-	<h2> This is my second header </h2>
-	
+	<h1> This is my 2nd header </h1>
+	<h1> This is my 3rd header </h1>
+	<h1> This is my 4th header </h1>
 	</body>
 	
 	</html>
