--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<head>
 			<style>
 				h1 {color:blue; font-size: 300%}
+				h2 {color:red;font-size:150%;} <!-- added at remote -->
 				p {color:blue}
 			</style>
 	</head>
