added h3 yellow color

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 			<style>
 				h1 {color:blue; font-size: 300%}
 				h2 {color:red;font-size:150%;} <!-- added at remote -->
+				h3 {colorz:yellow; font-size:150%;} <!-- added at local -->
 				p {color:blue}
 			</style>
 	</head>
