--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-	
+	<!DOCTYPE HTML>	
 	<html>
 	<!--	style tags and written -->
 	
@@ -7,7 +7,7 @@
 				h1 {color:blue; font-size: 300%}
 				h2 {color:red;font-size:150%;} <!-- added at remote -->
 				h3 {color:yellow; font-size:150%;} <!-- added at local -->
-				p {color:blue}
+				p {color:blue;}
 			</style>
 	</head>
 	
